fix: correcting header colour on mobile when no hero or header scrolled

--- a/content/themes/ea/src/scss/layout/header/_header.scss
+++ b/content/themes/ea/src/scss/layout/header/_header.scss
@@ -7,7 +7,11 @@
   .no-hero &,
   .layout-header--scrolled & {
     background-color: $color-header;
-    color: $color-secondary;
+    color: $color-primary;
+
+    @include break-min($headerNavShow) {
+      color: $color-secondary;
+    }
   }
 }
 
