--- a/content/themes/ea/src/scss/layout/header/_search.scss
+++ b/content/themes/ea/src/scss/layout/header/_search.scss
@@ -49,7 +49,7 @@
   max-width: 100%;
 
   position: fixed;
-  top: 65px;
+  top: 100px;
   right: #{$grid-gap / 2};
   left: #{$grid-gap / 2};
   z-index: 10;
