--- a/content/themes/ea/src/scss/layout/header/_tools.scss
+++ b/content/themes/ea/src/scss/layout/header/_tools.scss
@@ -81,6 +81,7 @@ a.header-tools__button {
 
   display: block;
 
+  .no-hero &,
   .layout-header--scrolled & {
     color: $color-tools-icons;
   }
